--- a/src/main/webapp/WEB-INF/views/news/newsAdd.html
+++ b/src/main/webapp/WEB-INF/views/news/newsAdd.html
@@ -99,6 +99,6 @@
 	</div>
 </form>
 <script type="text/javascript" src="../../layui/layui.js"></script>
-<script type="text/javascript" src="newsAdd.js"></script>
+<script type="text/javascript" src="../../../static/viewJs/newsAdd.js"></script>
 </body>
 </html>
