--- a/src/main/webapp/WEB-INF/views/systemSetting/basicParameter.html
+++ b/src/main/webapp/WEB-INF/views/systemSetting/basicParameter.html
@@ -98,7 +98,7 @@
 		</div>
 	</form>
 	<script type="text/javascript" src="../../layui/layui.js"></script>
-	<script type="text/javascript" src="basicParameter.js"></script>
+	<script type="text/javascript" src="../../../static/viewJs/basicParameter.js"></script>
 	<script type="text/javascript" src="../../js/cache.js"></script>
 </body>
 </html>
